--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -8,6 +8,12 @@ spring:
       port: 27017
       database: spending
 
+
+info:
+  name: @project.name@
+  description: @project.description@
+  version: @project.version@
+
 #logging
 logging:
   file: logs/${spring.application.name}.log
