--- a/front/package.json
+++ b/front/package.json
@@ -21,8 +21,10 @@
     "@angular/platform-browser-dynamic": "^2.3.1",
     "@angular/router": "^3.3.1",
     "@ng-bootstrap/ng-bootstrap": "^2.0.0-alpha.0",
+    "angular-font-awesome": "^3.1.2",
     "bootstrap": "^3.3.7",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "rxjs": "^5.0.1",
     "ts-helpers": "^1.1.1",
